# OpenGlDome

./: README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/android/com/opengldome/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment.glsl
app/src/main/assets/blend/: fragment.glsl  vertex.glsl
app/src/main/assets/common/: fragment.glsl  fragmentMvp.glsl  vertex.glsl  vertexMvp.glsl
app/src/main/assets/fbo/: fragment.glsl  vertex.glsl
app/src/main/assets/light/: fragment.glsl  vertex.glsl
app/src/main/assets/mvp/: fragment.glsl  vertex.glsl
app/src/main/assets/texture/: vertex.glsl
app/src/main/cpp/: CMakeLists.txt  GlLib.cpp  android_com_opengldome_ndk_Gllib.h
app/src/main/java/android/com/opengldome/: Application.java  MainActivity.java
app/src/main/java/android/com/opengldome/GLTextureView/: GLTextureView.java  TextGLActivity.java  (+1 more)
app/src/main/res/layout/: layout_water_mark.xml
app/src/main/res/raw/: basis_frag.glsl  basis_vert.glsl  depth_frag.glsl  depth_vert.glsl  light_frag.glsl  light_vert.glsl  lookup_table_frag.glsl  lookup_table_vert.glsl  mvp_frag.glsl  mvp_vert.glsl  obj_frag.glsl  obj_vert.glsl  oes_frag.glsl  oes_vert.glsl  partics_frag.glsl  partics_vert.glsl  shadow_frag.glsl  shadow_vert.glsl  texture_frag.glsl  texture_vert.glsl  watermark_base_frag.glsl  watermark_base_vert.glsl  watermark_frag.glsl  watermark_vert.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/android/com/opengldome/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+60 files in other folders)
